# starknet-rust

./: .gitignore  .gitmodules  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  VERSIONING.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: artifacts.yml  audit.yml  build.yml  doc.yml  lint.yaml  release.yml  test.yaml
assets/: ACCOUNTS_README.md  CONTRACT_README.md  CORE_DERIVE_README.md  CORE_README.md  MACROS_README.md  PROVIDERS_README.md  SIGNERS_README.md  TOKIO_TUNGSTENITE.md
examples/: batch.rs  declare_cairo1_contract.rs  deploy_account_with_ledger.rs  deploy_argent_account.rs  deploy_contract.rs  downcast_provider_error.rs  erc20_balance.rs  get_block.rs  jsonrpc.rs  ledger_public_key.rs  mint_tokens.rs  parse_jsonrpc_request.rs  serde.rs  snip_12_json.rs  transfer_with_ledger.rs  websocket.rs
examples/starknet-rust-cxx/: CMakeLists.txt  README.md  main.cpp
examples/starknet-rust-cxx/starknet-rust-cxx/: CMakeLists.txt  Cargo.toml
examples/starknet-rust-cxx/starknet-rust-cxx/src/: lib.rs
examples/starknet-rust-wasm/: Cargo.toml  README.md  index.html
examples/starknet-rust-wasm/src/: lib.rs
scripts/: build_bench_wasm.sh  release.sh
src/: lib.rs
starknet-accounts/tests/: single_owner_account.rs
starknet-core/: Cargo.toml
starknet-core-derive/src/: generics_visitor.rs  lib.rs
starknet-core/src/: codec.rs  crypto.rs
starknet-core/src/types/: codegen.rs  mod.rs
starknet-core/src/types/contract/: mod.rs
starknet-core/test-data/contracts/cairo1/artifacts/: abi_types.hashes.json  erc20.hashes.json
starknet-core/test-data/contracts/cairo2.6/artifacts/: erc20.hashes.json  trivial.hashes.json
starknet-core/test-data/contracts/cairo2/artifacts/: abi_types.hashes.json  erc20.hashes.json
starknet-crypto/: Cargo.toml
starknet-crypto/src/: blake2s_hash.rs  lib.rs
starknet-curve/: Cargo.toml
starknet-providers/src/: any.rs  provider.rs
starknet-providers/src/jsonrpc/: mod.rs
starknet-providers/src/sequencer/: provider.rs
starknet-providers/src/sequencer/models/: conversions.rs  state_update.rs
starknet-providers/tests/: jsonrpc.rs
starknet-rust-accounts/: Cargo.toml
starknet-rust-accounts/src/: lib.rs  single_owner.rs
starknet-rust-accounts/src/account/: declaration.rs  execution.rs  mod.rs
starknet-rust-accounts/src/factory/: argent.rs  mod.rs  open_zeppelin.rs
starknet-rust-accounts/tests/: ledger.rs  single_owner_account.rs
starknet-rust-contract/: Cargo.toml  test-data
starknet-rust-contract/src/: factory.rs
starknet-rust-contract/tests/: contract_deployment.rs
starknet-rust-core/: Cargo.toml  README.md
starknet-rust-core-derive/: Cargo.toml  README.md
starknet-rust-core-derive/src/: generics_visitor.rs  lib.rs
starknet-rust-core/benches/: cairo0_class_hash.rs  sierra_class_hash.rs
starknet-rust-core/src/: chain_id.rs  codec.rs  crypto.rs  utils.rs
starknet-rust-core/src/serde/: byte_array.rs  num_hex.rs  unsigned_field_element.rs
starknet-rust-core/src/types/: byte_array.rs  call.rs  codegen.rs  conversions.rs  eth_address.rs  execution_result.rs  hash_256.rs  message_status.rs  mod.rs  msg.rs  receipt_block.rs  serde_impls.rs  u256.rs
starknet-rust-core/src/types/contract/: legacy.rs  mod.rs
starknet-rust-core/src/types/typed_data/: domain.rs  encoder.rs  error.rs  hasher.rs  mod.rs  revision.rs  shortstring.rs  type_definition.rs  type_reference.rs  types.rs  value.rs
starknet-rust-core/test-data/contracts/cairo1/artifacts/: erc20.hashes.json
starknet-rust-core/test-data/contracts/cairo2/artifacts/: abi_types.hashes.json
starknet-rust-core/test-data/raw_gateway_responses/get_block/: 17_with_commitment_and_count_fields.txt  17_with_commitments_and_state_diff_length.txt
starknet-rust-core/test-data/raw_gateway_responses/get_state_update/: 8_with_migrated_compiled_classes.txt  9_pending_without_old_root.txt
starknet-rust-crypto/: Cargo.toml  README.md
starknet-rust-crypto/benches/: ecdsa_get_public_key.rs  ecdsa_recover.rs  ecdsa_sign.rs  ecdsa_verify.rs  pedersen_hash.rs  poseidon_hash.rs  rfc6979_generate_k.rs
starknet-rust-crypto/src/: blake2s_hash.rs  ecdsa.rs  fe_utils.rs  lib.rs  poseidon_hash.rs  rfc6979.rs  test_utils.rs
starknet-rust-crypto/src/pedersen_hash/: mod.rs  no_lookup.rs
starknet-rust-curve/: Cargo.toml  README.md
starknet-rust-curve/src/: curve_params.rs
starknet-rust-macros/: Cargo.toml  README.md
starknet-rust-macros/src/: lib.rs
starknet-rust-providers/: Cargo.toml  README.md
starknet-rust-providers/src/: any.rs  provider.rs
starknet-rust-providers/src/jsonrpc/: mod.rs
starknet-rust-providers/src/jsonrpc/transports/: http.rs  mod.rs  worker.rs
starknet-rust-providers/src/sequencer/: mod.rs  provider.rs
starknet-rust-providers/src/sequencer/models/: block.rs  contract.rs  conversions.rs  mod.rs  serde_impls.rs  state_update.rs  trace.rs  transaction.rs  transaction_receipt.rs  transaction_request.rs
starknet-rust-providers/test-data/: contracts  raw_gateway_responses
starknet-rust-providers/tests/: jsonrpc.rs
starknet-rust-signers/: Cargo.toml
starknet-rust-signers/src/: key_pair.rs  ledger.rs  local_wallet.rs  signer.rs
starknet-rust-signers/tests/: ledger.rs
starknet-rust-tokio-tungstenite/: Cargo.toml  README.md
starknet-rust-tokio-tungstenite/src/: error.rs  lib.rs  subscription.rs
starknet-rust-tokio-tungstenite/src/stream/: mod.rs  read.rs  write.rs
starknet-rust-tokio-tungstenite/tests/: websocket.rs
test-common/: Cargo.toml
tests/: macros.rs
tests/meta-package-consumer/: Cargo.toml
tests/meta-package-consumer/src/: lib.rs
utils/speculos-client/: Cargo.toml
utils/speculos-client/src/: lib.rs  starknet_app.rs
utils/test-common/: Cargo.toml
utils/test-common/src/: lib.rs
