[workspace.package]
edition = "2024"
authors = ["Software Mansion <contact@swmansion.com>", "Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/software-mansion/starknet-rust"
readme = "README.md"
keywords = ["ethereum", "starknet", "web3"]

[package]
name = "starknet-rust"
version = "0.18.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
documentation = "https://docs.rs/starknet"
repository.workspace = true
description = """
Complete Starknet library in Rust™
"""
keywords.workspace = true
exclude = [".github/**", "images/**"]

[workspace]
members = [
    "starknet-rust-core",
    "starknet-rust-core-derive",
    "starknet-rust-providers",
    "starknet-rust-contract",
    "starknet-rust-crypto",
    "starknet-rust-signers",
    "starknet-rust-accounts",
    "starknet-rust-macros",
    "starknet-rust-curve",
    "starknet-rust-tokio-tungstenite",
    "examples/starknet-rust-wasm",
    "examples/starknet-rust-cxx/starknet-rust-cxx",
    "utils/test-common",
]

[workspace.dependencies]
starknet-rust-core = { version = "0.17.0", path = "./starknet-rust-core" }
starknet-rust-core-derive = { version = "0.1.0", path = "./starknet-rust-core-derive" }
starknet-rust-providers = { version = "0.17.0", path = "./starknet-rust-providers" }
starknet-rust-contract = { version = "0.17.0", path = "./starknet-rust-contract" }
starknet-rust-crypto = { version = "0.9.0", path = "./starknet-rust-crypto" }
starknet-rust-signers = { version = "0.15.0", path = "./starknet-rust-signers" }
starknet-rust-accounts = { version = "0.17.0", path = "./starknet-rust-accounts" }
starknet-rust-macros = { version = "0.2.6", path = "./starknet-rust-macros" }
starknet-rust-curve = { version = "0.6.0", path = "./starknet-rust-curve" }
starknet-rust-tokio-tungstenite = { version = "0.4.0", path = "./starknet-rust-tokio-tungstenite" }
test-common = { path = "./utils/test-common" }

async-trait = "0.1.68"
auto_impl = "1.0.1"
base64 = "0.21.0"
bincode = "1.3.3"
blake2 = "0.10.6"
coins-bip32 = "0.11.1"
coins-ledger = "0.12.0"
console_error_panic_hook = "0.1.7"
criterion = "0.4.0"
crypto-bigint = "0.5.1"
cxx = "1.0"
cxx-build = "1.0"
digest = "0.10.7"
eth-keystore = "0.5.0"
ethereum-types = "0.14.1"
flate2 = "1.0.25"
foldhash = "0.1.4"
futures-util = "0.3.31"
getrandom = "0.2.9"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
indexmap = "2.7.0"
log = "0.4.19"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.19"
proc-macro2 = "1.0.88"
quote = "1.0.37"
rand = "0.8.5"
reqwest = "0.12.15"
rfc6979 = "0.4.0"
semver = "1.0.27"
serde = "1.0.160"
serde_json = "1.0.96"
serde_json_pythonic = "0.1.2"
serde_with = "3.9.0"
sha2 = "0.10.6"
sha3 = "0.10.7"
speculos-client = "0.1.2"
starknet-types-core = "0.2.0"
syn = "2.0.15"
test-case = "3.3.1"
thiserror = "1.0.40"
tokio = { version = "1.27.0" }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.15"
tungstenite = "0.26.2"
url = "2.3.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.50"
worker = "0.5.0"
zeroize = "1.6.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-rust-core.workspace = true
starknet-rust-providers.workspace = true
starknet-rust-contract.workspace = true
starknet-rust-signers.workspace = true
starknet-rust-accounts.workspace = true
starknet-rust-macros.workspace = true

[dev-dependencies]
serde_json.workspace = true
starknet-rust-signers.workspace = true
starknet-rust-tokio-tungstenite.workspace = true
tokio.workspace = true
url.workspace = true

[features]
default = []
ledger = ["starknet-rust-signers/ledger"]
no_unknown_fields = [
    "starknet-rust-core/no_unknown_fields",
    "starknet-rust-providers/no_unknown_fields",
]
# Cloudflare Workers provider support
worker = ["starknet-rust-providers/worker"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "allow"
rust.unreachable_pub = "allow"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
use_self = "warn"
# A regression in Rust 1.86.0 seems to have caused false positives in this lint.
missing_const_for_fn = "allow"
empty_line_after_doc_comments = "warn"
iter_on_single_items = "warn"
match_same_arms = "warn"
doc_markdown = "warn"
unnecessary_struct_initialization = "warn"
string_lit_as_bytes = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
type_repetition_in_bounds = "allow"
manual_string_new = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
zero_sized_map_values = "warn"
single_char_pattern = "warn"
needless_continue = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
