[workspace.package]
edition = "2024"
authors = ["Software Mansion <contact@swmansion.com>", "Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/software-mansion/starknet-rust"
readme = "README.md"
keywords = ["ethereum", "starknet", "web3"]

[package]
name = "starknet-rust"
version = "0.18.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
documentation = "https://docs.rs/starknet"
repository.workspace = true
description = """
Complete Starknet library in Rust™
"""
keywords.workspace = true
exclude = [".github/**", "images/**"]

[workspace]
members = [
    "starknet-rust-core",
    "starknet-rust-core-derive",
    "starknet-rust-providers",
    "starknet-rust-contract",
    "starknet-rust-crypto",
    "starknet-rust-signers",
    "starknet-rust-accounts",
    "starknet-rust-macros",
    "starknet-rust-curve",
    "starknet-rust-tokio-tungstenite",
    "examples/starknet-rust-wasm",
    "examples/starknet-rust-cxx/starknet-rust-cxx",
    "utils/test-common",
]

[workspace.dependencies]
starknet-rust-core = { version = "0.17.0", path = "./starknet-rust-core", default-features = false }
starknet-rust-core-derive = { version = "0.1.0", path = "./starknet-rust-core-derive" }
starknet-rust-providers = { version = "0.17.0", path = "./starknet-rust-providers", default-features = false }
starknet-rust-contract = { version = "0.17.0", path = "./starknet-rust-contract", default-features = false }
starknet-rust-crypto = { version = "0.9.0", path = "./starknet-rust-crypto", default-features = false }
starknet-rust-signers = { version = "0.15.0", path = "./starknet-rust-signers", default-features = false }
starknet-rust-accounts = { version = "0.17.0", path = "./starknet-rust-accounts", default-features = false }
starknet-rust-macros = { version = "0.2.6", path = "./starknet-rust-macros" }
starknet-rust-curve = { version = "0.6.0", path = "./starknet-rust-curve", default-features = false }
starknet-rust-tokio-tungstenite = { version = "0.4.0", path = "./starknet-rust-tokio-tungstenite" }
test-common = { path = "./utils/test-common" }

async-trait = "0.1.89"
auto_impl = "1.3.0"
base64 = { version = "0.21.7", default-features = false }
bincode = "1.3.3"
blake2 = { version = "0.10.6", default-features = false }
coins-bip32 = "0.11.1"
coins-ledger = { version = "0.12.0", default-features = false }
console_error_panic_hook = "0.1.7"
criterion = { version = "0.4.0", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }
cxx = "1.0"
cxx-build = "1.0"
digest = { version = "0.10.7", default-features = false }
eth-keystore = { version = "0.5.0", default-features = false }
ethereum-types = "0.14.1"
flate2 = "1.1.5"
foldhash = { version = "0.1.5", default-features = false }
futures-util = "0.3.31"
getrandom = "0.2.16"
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
hmac = { version = "0.12.1", default-features = false }
indexmap = { version = "2.13.0", default-features = false }
log = "0.4.29"
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
proc-macro2 = "1.0.105"
quote = "1.0.43"
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12.28", default-features = false }
rfc6979 = { version = "0.4.0", default-features = false }
semver = { version = "1.0.27", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
serde_json_pythonic = { version = "0.1.2", default-features = false }
serde_with = { version = "3.16.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
speculos-client = "0.1.2"
starknet-types-core = { version = "=0.2.0", default-features = false }
syn = "2.0.114"
test-case = "3.3.1"
thiserror = "1.0.69"
tokio = { version = "1.49.0", default-features = false }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.18"
tungstenite = "0.26.2"
url = "2.5.8"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"
worker = "0.5.0"
zeroize = "1.8.2"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-rust-core.workspace = true
starknet-rust-providers.workspace = true
starknet-rust-contract.workspace = true
starknet-rust-signers.workspace = true
starknet-rust-accounts.workspace = true
starknet-rust-macros.workspace = true

[dev-dependencies]
serde_json.workspace = true
starknet-rust-signers = { workspace = true, features = ["ledger"] }
starknet-rust-tokio-tungstenite.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[features]
default = []
ledger = ["starknet-rust-signers/ledger"]
no_unknown_fields = [
    "starknet-rust-core/no_unknown_fields",
    "starknet-rust-providers/no_unknown_fields",
]
# Cloudflare Workers provider support
worker = ["starknet-rust-providers/worker"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "allow"
rust.unreachable_pub = "allow"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
use_self = "warn"
# A regression in Rust 1.86.0 seems to have caused false positives in this lint.
missing_const_for_fn = "allow"
empty_line_after_doc_comments = "warn"
iter_on_single_items = "warn"
match_same_arms = "warn"
doc_markdown = "warn"
unnecessary_struct_initialization = "warn"
string_lit_as_bytes = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
type_repetition_in_bounds = "allow"
manual_string_new = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
zero_sized_map_values = "warn"
single_char_pattern = "warn"
needless_continue = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
