[workspace.package]
edition = "2024"
authors = ["Software Mansion <contact@swmansion.com>", "Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/software-mansion/starknet-rust"
readme = "README.md"
keywords = ["ethereum", "starknet", "web3"]

[package]
name = "starknet-rust"
version = "0.18.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
documentation = "https://docs.rs/starknet"
repository.workspace = true
description = """
Complete Starknet library in Rust™
"""
keywords.workspace = true
exclude = [".github/**", "images/**"]

[workspace]
members = [
    "starknet-rust-core",
    "starknet-rust-core-derive",
    "starknet-rust-providers",
    "starknet-rust-contract",
    "starknet-rust-crypto",
    "starknet-rust-signers",
    "starknet-rust-accounts",
    "starknet-rust-macros",
    "starknet-rust-curve",
    "starknet-rust-tokio-tungstenite",
    "examples/starknet-rust-wasm",
    "examples/starknet-rust-cxx/starknet-rust-cxx",
    "utils/test-common",
]

[workspace.dependencies]
starknet-rust-core = { version = "0.17.0", path = "./starknet-rust-core", default-features = false }
starknet-rust-core-derive = { version = "0.1.0", path = "./starknet-rust-core-derive" }
starknet-rust-providers = { version = "0.17.0", path = "./starknet-rust-providers", default-features = false }
starknet-rust-contract = { version = "0.17.0", path = "./starknet-rust-contract", default-features = false }
starknet-rust-crypto = { version = "0.9.0", path = "./starknet-rust-crypto", default-features = false }
starknet-rust-signers = { version = "0.15.0", path = "./starknet-rust-signers", default-features = false }
starknet-rust-accounts = { version = "0.17.0", path = "./starknet-rust-accounts", default-features = false }
starknet-rust-macros = { version = "0.2.6", path = "./starknet-rust-macros" }
starknet-rust-curve = { version = "0.6.0", path = "./starknet-rust-curve", default-features = false }
starknet-rust-tokio-tungstenite = { version = "0.4.0", path = "./starknet-rust-tokio-tungstenite" }
test-common = { path = "./utils/test-common" }

async-trait = "0.1.89"
auto_impl = "1.3.0"
base64 = { version = "0.22.1", default-features = false }
bincode = "1.3.3" # https://github.com/software-mansion/starknet-rust/issues/78
blake2 = { version = "0.10.6", default-features = false }
coins-bip32 = "0.13.0"
coins-ledger = { version = "0.13.0", default-features = false }
console_error_panic_hook = "0.1.7"
criterion = { version = "0.8.1", default-features = false }
crypto-bigint = { version = "0.6.1", default-features = false }
cxx = "1.0"
cxx-build = "1.0"
digest = { version = "0.10.7", default-features = false }
eth-keystore = { version = "0.5.0", default-features = false }
ethereum-types = "0.16.0"
flate2 = "1.1.5"
foldhash = { version = "0.2.0", default-features = false }
futures-util = "0.3.31"
getrandom = "0.2.16"
hex = { version = "0.4.3", default-features = false }
hex-literal = "1.1.0"
hmac = { version = "0.12.1", default-features = false }
indexmap = { version = "2.13.0", default-features = false }
log = "0.4.29"
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
proc-macro2 = "1.0.105"
quote = "1.0.43"
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.13.1", default-features = false }
rfc6979 = { version = "0.4.0", default-features = false }
semver = { version = "1.0.27", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
serde_json_pythonic = { version = "0.1.2", default-features = false }
serde_with = { version = "3.16.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
speculos-client = "0.1.2"
starknet-types-core = { version = "=0.2.0", default-features = false }
syn = "2.0.114"
test-case = "3.3.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
tungstenite = "0.28.0"
url = "2.5.8"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"
worker = "0.7.2"
zeroize = "1.8.2"

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-rust-core.workspace = true
starknet-rust-providers.workspace = true
starknet-rust-contract.workspace = true
starknet-rust-signers.workspace = true
starknet-rust-accounts.workspace = true
starknet-rust-macros.workspace = true

[dev-dependencies]
serde_json.workspace = true
starknet-rust-signers = { workspace = true, features = ["ledger"] }
starknet-rust-tokio-tungstenite.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[features]
default = []
ledger = ["starknet-rust-signers/ledger"]
no_unknown_fields = [
    "starknet-rust-core/no_unknown_fields",
    "starknet-rust-providers/no_unknown_fields",
]
# Cloudflare Workers provider support
worker = ["starknet-rust-providers/worker"]

[workspace.lints]
rustdoc.all = "allow"

[workspace.lints.rust]
missing_debug_implementations = "allow"
missing_docs = "allow"
unreachable_pub = "allow"
unused_must_use = "deny"


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow specific pedantic/nursery lints that are too noisy
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
inline_always = "allow"
similar_names = "allow"
unsafe_derive_deserialize = "allow"
too_long_first_doc_paragraph = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
future_not_send = "allow"
needless_pass_by_value = "allow"
struct_field_names = "allow"
trivially_copy_pass_by_ref = "allow"
return_self_not_must_use = "allow"

match_wildcard_for_single_variants = "allow"
manual_let_else = "allow"
cast_precision_loss = "allow"
mismatching_type_param_order = "allow"
default_trait_access = "allow"
unreadable_literal = "allow"
redundant_pub_crate = "allow"
large_digit_groups = "allow"
needless_for_each = "allow"
option_if_let_else = "allow"
type_repetition_in_bounds = "allow"
ref_option = "allow"
ref_option_ref = "allow"