[package]
name = "starknet-rust-accounts"
version = "0.17.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Types for handling Starknet account abstraction
"""
keywords.workspace = true
exclude = ["test-data/**"]

[dependencies]
starknet-rust-core.workspace = true
starknet-rust-crypto.workspace = true
starknet-rust-providers.workspace = true
starknet-rust-signers.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
test-common.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
coins-ledger.workspace = true
speculos-client.workspace = true
starknet-rust-signers.workspace = true

[lints]
workspace = true
