[package]
name = "starknet-rust-contract"
version = "0.17.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Types and utilities for Starknet smart contract deployment and interaction
"""
keywords.workspace = true
exclude = ["test-data/**"]

[dependencies]
starknet-rust-core = { version = "0.17.0", path = "../starknet-rust-core" }
starknet-rust-providers = { version = "0.17.0", path = "../starknet-rust-providers" }
starknet-rust-accounts = { version = "0.17.0", path = "../starknet-rust-accounts" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.9.0"
thiserror = "1.0.40"

[dev-dependencies]
rand = { version = "0.8.5", features=["std_rng"] }
starknet-rust-signers = { version = "0.15.0", path = "../starknet-rust-signers" }
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
test-common = { path = "../utils/test-common" }

[lints]
workspace = true
