[package]
name = "starknet-rust-contract"
version = "0.17.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Types and utilities for Starknet smart contract deployment and interaction
"""
keywords.workspace = true
exclude = ["test-data/**"]

[dependencies]
starknet-rust-core = { workspace = true, features = ["std"] }
starknet-rust-providers = { workspace = true, features = ["std"] }
starknet-rust-accounts = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand = { workspace = true, features=["std_rng"] }
starknet-rust-signers.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true
test-common.workspace = true

[features]
default = ["std"]
std = [
    "starknet-rust-core/std",
    "starknet-rust-providers/std",
    "starknet-rust-accounts/std",
]

[lints]
workspace = true