[package]
name = "starknet-rust-core-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Procedural macros for `starknet-rust-core`
"""
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[features]
default = []
import_from_starknet = []

[lints]
workspace = true
