[package]
name = "starknet-rust-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Core structures for the starknet crate
"""
keywords.workspace = true
exclude = ["test-data/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-rust-crypto = { workspace = true, features = ["alloc"] }
starknet-rust-core-derive.workspace = true
base64 = { workspace = true, features = ["alloc"] }
crypto-bigint.workspace = true
flate2 = { workspace = true, optional = true }
foldhash.workspace = true
hex = { workspace = true, features = ["alloc"] }
indexmap = { workspace = true, features = ["serde"] }
num-traits.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc", "raw_value"] }
serde_json_pythonic = { workspace = true, features = ["alloc", "raw_value"] }
serde_with = { workspace = true, features = ["alloc", "macros"] }
sha3.workspace = true
starknet-types-core = { workspace = true, features = ["curve", "serde", "num-traits"] }
semver.workspace = true

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
hex-literal.workspace = true
starknet-rust-core = { path = ".", features = ["no_unknown_fields"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = ["std"]
std = ["dep:flate2", "starknet-rust-crypto/std", "starknet-types-core/std", "indexmap/std"]
no_unknown_fields = []

[[bench]]
name = "cairo0_class_hash"
harness = false

[[bench]]
name = "sierra_class_hash"
harness = false

[lints]
workspace = true
