[package]
name = "starknet-rust-crypto"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Low-level cryptography utilities for Starknet
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]
exclude = ["test-data/**"]

[dependencies]
starknet-rust-curve.workspace = true
crypto-bigint = { workspace = true, features = ["zeroize", "hybrid-array"] }
hmac.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
rfc6979.workspace = true
sha2.workspace = true
zeroize.workspace = true
hex = { workspace = true, optional = true }
starknet-types-core = { workspace = true, features = ["curve", "hash"] }
digest.workspace = true
blake2.workspace = true

[features]
default = ["std", "signature-display"]
std = ["starknet-types-core/std"]
alloc = ["hex?/alloc", "starknet-types-core/alloc"]
signature-display = ["dep:hex", "alloc"]
pedersen_no_lookup = []

[dev-dependencies]
criterion.workspace = true
hex.workspace = true
hex-literal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
starknet-types-core = { workspace = true, features = ["alloc", "hash"] }
test-case.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[[bench]]
name = "pedersen_hash"
harness = false

[[bench]]
name = "poseidon_hash"
harness = false

[[bench]]
name = "ecdsa_get_public_key"
harness = false

[[bench]]
name = "ecdsa_sign"
harness = false

[[bench]]
name = "ecdsa_verify"
harness = false

[[bench]]
name = "ecdsa_recover"
harness = false

[[bench]]
name = "rfc6979_generate_k"
harness = false

[lints]
workspace = true
