[package]
name = "starknet-rust-curve"
version = "0.6.0"
authors = ["Software Mansion", "Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition.workspace = true
readme = "README.md"
repository = "https://github.com/software-mansion/starknet-rust"
description = """
Stark curve
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[dependencies]
starknet-types-core = { version = "0.2.0", default-features = false, features = ["curve"] }

[lints]
workspace = true
