[package]
name = "starknet-rust-curve"
version = "0.6.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Stark curve
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[dependencies]
starknet-types-core = { version = "0.2.0", default-features = false, features = ["curve"] }

[lints]
workspace = true
