[package]
name = "starknet-rust-curve"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Stark curve
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[dependencies]
starknet-types-core = { workspace = true, features = ["curve"] }

[lints]
workspace = true
