[package]
name = "starknet-rust-macros"
version = "0.2.6"
authors = ["Software Mansion", "Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition.workspace = true
readme = "README.md"
repository = "https://github.com/software-mansion/starknet-rust"
description = """
Procedural macros for `starknet-rust`
"""
keywords = ["ethereum", "starknet", "web3"]

[lib]
proc-macro = true

[dependencies]
starknet-rust-core = { version = "0.17.0", path = "../starknet-rust-core" }
syn = "2.0.15"

[features]
default = []
use_imported_type = []

[lints]
workspace = true
