[package]
name = "starknet-rust-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Procedural macros for `starknet-rust`
"""
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
starknet-rust-core.workspace = true
syn.workspace = true

[features]
default = []
use_imported_type = []

[lints]
workspace = true
