[package]
name = "starknet-rust-providers"
version = "0.17.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Provider implementations for the starknet crate
"""
keywords.workspace = true
exclude = ["test-data/**"]

[dependencies]
starknet-rust-core.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
ethereum-types.workspace = true
flate2.workspace = true
log.workspace = true
url.workspace = true
reqwest.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
worker = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
starknet-rust-providers.workspace = true
tokio.workspace = true
test-common.workspace = true

[features]
default = []
no_unknown_fields = [
    "starknet-rust-core/no_unknown_fields"
]

[lints]
workspace = true
