[package]
name = "starknet-rust-providers"
version = "0.17.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Provider implementations for the starknet crate
"""
keywords.workspace = true
exclude = ["test-data/**"]

[dependencies]
starknet-rust-core = { version = "0.17.0", path = "../starknet-rust-core" }
async-trait = "0.1.68"
auto_impl = "1.0.1"
ethereum-types = "0.14.1"
flate2 = "1.0.25"
log = "0.4.19"
url = "2.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0.40"
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "3.9.0"
worker = { version = "0.5.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }

[dev-dependencies]
starknet-rust-providers = { path = ".", features = ["no_unknown_fields"] }
tokio = { version = "1.27.0", features = ["full"] }
test-common = { path = "../utils/test-common" }

[features]
default = []
no_unknown_fields = [
    "starknet-rust-core/no_unknown_fields"
]

[lints]
workspace = true
