[package]
name = "starknet-rust-providers"
version = "0.17.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Provider implementations for the starknet crate
"""
keywords.workspace = true
exclude = ["test-data/**"]

[dependencies]
starknet-rust-core = { workspace = true, features = ["std"] }
async-trait.workspace = true
auto_impl.workspace = true
ethereum-types.workspace = true
flate2.workspace = true
log.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["std"] }
worker = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
starknet-rust-providers = { path = ".", features = ["no_unknown_fields"] }
tokio = { workspace = true, features = ["full"] }
test-common.workspace = true

[features]
default = ["std"]
std = ["starknet-rust-core/std"]
no_unknown_fields = [
    "starknet-rust-core/no_unknown_fields"
]

[lints]
workspace = true
