[package]
name = "starknet-rust-signers"
version = "0.15.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Starknet signer implementations
"""
keywords.workspace = true

[dependencies]
starknet-rust-core.workspace = true
starknet-rust-crypto.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
thiserror.workspace = true
crypto-bigint.workspace = true
rand.workspace = true
coins-bip32 = { workspace = true, optional = true }
coins-ledger = { workspace = true, optional = true }
semver = { workspace = true, optional = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
eth-keystore.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
speculos-client.workspace = true
starknet-rust-signers = { workspace = true, features = ["ledger"] }
tokio = { workspace = true, features = ["full", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = []

ledger = ["coins-bip32", "coins-ledger", "semver"]

[lints]
workspace = true
